<resources>
    <string name="app_name">一生一世</string>
    <string name="appname">yishengyishi</string>
    <string name="menu_me">我</string>
    <string name="menu_genealogy">家谱</string>
    <string name="menu_memoirs">回忆录</string>
    <string name="menu_chat">聊天</string>
    <string name="menu_box_bar">箱吧</string>
    <string name="text_registeract_desc">现在就登陆【一生一世】免费创建家谱树\n开始书写、发现、分享你和家人的故事</string>
    <string name="text_giftbook">礼簿</string>
    <string name="text_myinfo">我的资料</string>
    <string name="text_setting">设置</string>
    <string name="text_feedback">意见反馈</string>
    <string name="text_invitationcode">我的邀请码</string>
    <string name="text_me_myname">我的姓名</string>
    <string name="text_me_mynickname">我的昵称</string>
    <string name="text_me_mybirthday">我的生日</string>
    <string name="text_me_mynativeplace">我的籍贯</string>
    <string name="text_me_myprofession">我的职业</string>
    <string name="text_me_mywish">我的愿望</string>
    <string name="text_setting_aboutme">关于我们</string>
    <string name="text_setting_website">官网</string>
    <string name="text_setting_termsofservice">服务条款</string>
    <string name="text_setting_pushsetting">推送设置</string>
    <string name="text_setting_clearcacle">清空缓存</string>
    <string name="text_registerfill_setupheard">设置头像</string>
    <string name="text_registerfill_name">姓名</string>
    <string name="text_registerfill_gender">性别</string>
    <string name="text_invitation_code">我的邀请码</string>
    <string name="text_save">保存</string>
    <string name="text_giftmoney_remark">备注</string>
    <string name="text_giftmoney_date">礼金日期</string>
    <string name="text_giftmoney_guestname">宾客名称</string>
    <string name="text_giftmoney_income">礼金收入</string>
    <string name="text_cancel">取消</string>
    <string name="chat_press_talk">按住 说话</string>
    <string name="has_invite_code">已输入邀请码：%1$s</string>
    <string name="hot_topic">热门话题</string>
    <string name="republic">发表</string>
</resources>
