<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_frag_default">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bg_frag_deepen"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingTop="10dp">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="12dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:lines="1"
                android:text="@string/text_setting_aboutme"
                android:textColor="@color/colorTitleTextGray" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:gravity="center_vertical"
                android:orientation="horizontal">


                <ImageView
                    android:layout_width="@dimen/icon_left_width"
                    android:layout_height="@dimen/icon_left_height"
                    android:layout_marginLeft="5dp"
                    android:background="@mipmap/ic_arrow_right_gray"
                    android:padding="3dp" />


            </LinearLayout>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/titlebar_separator_height"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="0.5dp"
            android:background="@color/colorTitleBarSeparator" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="12dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:lines="1"
                android:text="@string/text_setting_website"
                android:textColor="@color/colorTitleTextGray" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/icon_left_width"
                    android:layout_height="@dimen/icon_left_height"
                    android:layout_marginLeft="5dp"
                    android:background="@mipmap/ic_arrow_right_gray"
                    android:padding="3dp" />


            </LinearLayout>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/titlebar_separator_height"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="0.5dp"
            android:background="@color/colorTitleBarSeparator" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="12dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:lines="1"
                android:text="@string/text_setting_termsofservice"
                android:textColor="@color/colorTitleTextGray" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/icon_left_width"
                    android:layout_height="@dimen/icon_left_height"
                    android:layout_marginLeft="5dp"
                    android:background="@mipmap/ic_arrow_right_gray"
                    android:padding="3dp" />

            </LinearLayout>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/titlebar_separator_height"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="0.5dp"
            android:background="@color/colorTitleBarSeparator" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="12dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:lines="1"
                android:text="@string/text_setting_pushsetting"
                android:textColor="@color/colorTitleTextGray" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/icon_left_width"
                    android:layout_height="@dimen/icon_left_height"
                    android:layout_marginLeft="5dp"
                    android:background="@mipmap/ic_arrow_right_gray"
                    android:padding="3dp" />


            </LinearLayout>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/titlebar_separator_height"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="0.5dp"
            android:background="@color/colorTitleBarSeparator" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="12dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:lines="1"
                android:text="@string/text_setting_clearcacle"
                android:textColor="@color/colorTitleTextGray" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/icon_left_width"
                    android:layout_height="@dimen/icon_left_height"
                    android:layout_marginLeft="5dp"
                    android:background="@mipmap/ic_arrow_right_gray"
                    android:padding="3dp" />


            </LinearLayout>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/titlebar_separator_height"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="0.5dp"
            android:background="@color/colorTitleBarSeparator" />

    </LinearLayout>
</ScrollView>